--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,8 +1,8 @@
 .scale-60 {
-    width: 60%;
+    max-width: 60%;
 }
 .scale-70 {
-    width: 70%;
+    max-width: 70%;
 }
 
 .landing_bg {
@@ -11,7 +11,7 @@
     background-position: center;
     background-repeat: no-repeat;
     height: 100vh;
-    width: 100%;
+    max-width: 100%;
 }
 
 .land-bottom {
@@ -19,7 +19,8 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-   width: 100%;
+    max-width: 100%;
+    max-height: 100%;
 
 }
 
@@ -137,4 +138,21 @@ div.trans {
     -moz-animation: bounce 2s infinite;
     -webkit-animation: bounce 2s infinite;
     animation: bounce 2s infinite;
+  }
+
+  @media only screen and (max-width: 700px) {
+    .hide {
+      display: none !important;
+    }
+
+    .slogan {
+        font-size: 16px;
+    }
+
+    .landing_bg {
+        background-image: url("/img/mobile_bg-01.svg");
+        height: 100%;
+    }
+
+
   }
