--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,3 +1,9 @@
+.scale-30 {
+    max-width: 30%;
+}
+.scale-40 {
+    max-width: 40%;
+}
 .scale-60 {
     max-width: 60%;
 }
@@ -5,23 +11,57 @@
     max-width: 70%;
 }
 
+.mobile-show {
+    display: none;
+}
+
+.btn-custom {
+    border: 2px solid  rgb(207, 207, 207);
+    background-color: rgb(207, 207, 207);
+    font-weight: bolder;
+    font-size: larger;
+    color:  black;
+}
+
+.form-custom {
+    border: solid 1px #ffcc66;
+    background-color: #ffcc664b;
+}
+
+.form-custom:focus {
+    border: solid 3px #ffcc66;
+    border-color: #ffcc66;
+    box-shadow: inset 0 1px 1px rgba(0,0,0, 0.075), 0 0 5px rgba(255,204,102, 1);
+}
+
+.btn-custom:hover {
+    border: 2px solid #ffcc66;
+    background-color: #ffcc66;
+    color: white;
+}
+
+.custom-alert {
+    border: solid 2px red !important;
+    background-color: white !important;
+}
+
+.custom-success {
+    position: absolute;
+    left: 35%;
+    z-index: 1;
+}
+
+.text-red {
+    color: red;
+}
+
 .landing_bg {
-    background-image: url("/img/land_image-01.svg");
+    background-image: url("/img/land_bg-01.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     height: 100vh;
     max-width: 100%;
-}
-
-.land-bottom {
-    background-image: url("/img/land_bottom-01.svg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    max-width: 100%;
-    max-height: 100%;
-
 }
 
 .slogan {
@@ -50,6 +90,14 @@ div.trans {
 
 }
 
+.fa-instagram {
+    background: #f09433;
+background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+    color: white;
+  }
 
   .fa-facebook {
     background: #3B5998;
@@ -58,11 +106,6 @@ div.trans {
 
   .fa-twitter {
     background: #55ACEE;
-    color: white;
-  }
-
-  .fa-instagram {
-    background: #125688;
     color: white;
   }
 
@@ -140,13 +183,13 @@ div.trans {
     animation: bounce 2s infinite;
   }
 
-  @media only screen and (max-width: 700px) {
+  @media only screen and (max-width: 768px) {
     .hide {
       display: none !important;
     }
 
     .slogan {
-        font-size: 16px;
+        font-size: 20px;
     }
 
     .landing_bg {
@@ -154,5 +197,46 @@ div.trans {
         height: 100%;
     }
 
+    .mobile-show {
+        display: block;
+    }
+
+    .mobile-hide {
+        display: none;
+    }
+
+    .mobile-text {
+        color: white;
+    }
+
+    form label{
+        color: #fff;
+      }
+
+      .form-custom {
+        border: solid 1px #ffcc66;
+        background-color: white;
+    }
+
+    .form-custom:focus {
+        border-color: #ffcc66;
+        box-shadow: inset 0 1px 1px rgba(0,0,0, 0.075), 0 0 5px rgba(255,204,102, 1);
+    }
+
+    .btn-custom {
+        border: 2px solid white;
+        background-color: white;
+        font-weight: bolder;
+        font-size: larger;
+        color:  black;
+    }
+
+    .custom-success {
+        position: static;
+        left: 0%;
+        margin-top: 0 !important;
+    }
 
   }
+
+
