added message to form

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,12 +1,19 @@
+.scale-20 {
+    max-width: 20%;
+}
+
 .scale-30 {
     max-width: 30%;
 }
+
 .scale-40 {
     max-width: 40%;
 }
+
 .scale-60 {
     max-width: 60%;
 }
+
 .scale-70 {
     max-width: 70%;
 }
@@ -23,13 +30,22 @@
     color:  black;
 }
 
+.custom-message {
+    border: solid 1px #ffcc66;
+    background-color: #ffcc664b;
+    border-radius: 4px;
+    width: 100%;
+
+}
+
 .form-custom {
     border: solid 1px #ffcc66;
     background-color: #ffcc664b;
 }
 
-.form-custom:focus {
+.form-custom:focus, .custom-message:focus {
     border: solid 3px #ffcc66;
+    background-color: white;
     border-color: #ffcc66;
     box-shadow: inset 0 1px 1px rgba(0,0,0, 0.075), 0 0 5px rgba(255,204,102, 1);
 }
@@ -213,12 +229,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', end
         color: #fff;
       }
 
-      .form-custom {
+      .form-custom, .custom-message {
         border: solid 1px #ffcc66;
         background-color: white;
     }
 
-    .form-custom:focus {
+    .form-custom:focus, .custom-message:focus {
         border-color: #ffcc66;
         box-shadow: inset 0 1px 1px rgba(0,0,0, 0.075), 0 0 5px rgba(255,204,102, 1);
     }
