--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,3 +1,13 @@
+.container-fluid {
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+.container-fluid::-webkit-scrollbar { /* WebKit */
+    width: 0;
+    height: 0;
+}
+
 .scale-20 {
     max-width: 20%;
 }
@@ -80,6 +90,10 @@
     max-width: 100%;
 }
 
+textarea {
+    resize: none;
+}
+
 .slogan {
     font-size: 24px;
     color: white;
@@ -129,54 +143,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', end
     background-image: linear-gradient(to top, rgb(172, 172, 172), rgba(237,28,36,1));
   }
 
-  @-moz-keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      -moz-transform: translateY(0);
-      transform: translateY(0);
-    }
-    40% {
-      -moz-transform: translateY(-30px);
-      transform: translateY(-30px);
-    }
-    60% {
-      -moz-transform: translateY(-15px);
-      transform: translateY(-15px);
-    }
-  }
-  @-webkit-keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      -webkit-transform: translateY(0);
-      transform: translateY(0);
-    }
-    40% {
-      -webkit-transform: translateY(-30px);
-      transform: translateY(-30px);
-    }
-    60% {
-      -webkit-transform: translateY(-15px);
-      transform: translateY(-15px);
-    }
-  }
-  @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      -moz-transform: translateY(0);
-      -ms-transform: translateY(0);
-      -webkit-transform: translateY(0);
-      transform: translateY(0);
-    }
-    40% {
-      -moz-transform: translateY(-30px);
-      -ms-transform: translateY(-30px);
-      -webkit-transform: translateY(-30px);
-      transform: translateY(-30px);
-    }
-    60% {
-      -moz-transform: translateY(-15px);
-      -ms-transform: translateY(-15px);
-      -webkit-transform: translateY(-15px);
-      transform: translateY(-15px);
-    }
-  }
+
 
   i {
     display: block;
@@ -193,11 +160,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', end
     height: 60px;
   }
 
-  .bounce {
-    -moz-animation: bounce 2s infinite;
-    -webkit-animation: bounce 2s infinite;
-    animation: bounce 2s infinite;
-  }
+
 
   @media only screen and (max-width: 768px) {
     .hide {
